# door

./: .gitignore  README.md  all_cards.py.dist  cards.h  cards.h.dist  rfid-old.c  rfid.c  rfid.py  setup.py
cgi/: doorcgi.conf.example  doorcgi.hs  doorcgi.spec
door/: doorstate.py  rfid.py
doorcgi/: Main.hs  doorcgi.cabal  doorcgi.hs
rpm/: 50-door.conf  51-doorstate.conf  door.service  door.spec  doorcgi.conf  doorcgi.spec  doorstate.service  makerpm.sh
